--- a/templates/about.html
+++ b/templates/about.html
@@ -1,3 +1,5 @@
-{% extends "layout.html" %} {%block content %}
-<h2>About page</h2>
-{% endblock %}
+{% extends "base.html" %} {% block content %} {% for post in posts %}
+<h1>{{ post.title }}</h1>
+<p>By: {{post.author}} on {{post.date_posted}}</p>
+<p>{{post.content}}</p>
+{% endfor %} {% endblock %}
