created a base html file template for the project

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,8 +50,8 @@
       </div>
     </div>
     <!-- /End Preloader -->
-    {% include "header.html" %} {% include "hero.html" %} {% block
-    featureContent %}{% endblock %}
+    {% include "header.html" %} {% include "hero.html" %} {% block content %}{%
+    endblock %}
 
     <!-- Start Call Action Area -->
     <!-- <section class="call-action">
