--- a/templates/register.html
+++ b/templates/register.html
@@ -4,79 +4,37 @@
 <div class="container">
   <section class="vh-90">
     <div class="container h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-lg-12 col-xl-11">
-          <div class="card text-black" style="border-radius: 25px">
-            <div class="card-body p-md-5">
-              <div class="row justify-content-center">
-                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">
-                    Sign up
-                  </p>
-                  <form class="mx-1 mx-md-4" method="POST">
-                    <div class="form-group">
-                      <input
-                        class="form-control my-3"
-                        type="email"
-                        id="email"
-                        name="email"
-                        placeholder="Enter email"
-                      />
-                    </div>
-                    <div class="form-group">
-                      <input
-                        class="form-control my-3"
-                        type="text"
-                        id="first_name"
-                        name="first_name"
-                        placeholder="Enter First Name"
-                      />
-                    </div>
-                    <div class="form-group">
-                      <input
-                        class="form-control my-3"
-                        type="password"
-                        id="password1"
-                        name="password1"
-                        placeholder="Enter Password"
-                      />
-                    </div>
-                    <div class="form-group">
-                      <input
-                        class="form-control my-3"
-                        type="password"
-                        id="password2"
-                        name="password2"
-                        placeholder="Confirm Password"
-                      />
-                    </div>
-                    <input
-                      class="btn authbg form-control my-3"
-                      type="submit"
-                      value="Submit"
-                    />
-                    <small
-                      >Already Registered?
-                      <a href="{{url_for('main_blueprint.login')}}"
-                        >Login here</a
-                      >
-                    </small>
-                  </form>
-                </div>
-                <div
-                  class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2"
-                >
-                  <img
-                    src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
-                    class="img-fluid"
-                    alt="Sample image"
-                  />
-                </div>
-              </div>
-            </div>
+      <form action="" method="POST">
+        {{ form.hidden_tag() }}
+        <fieldset class="form-group">
+          <legen class="border-bottom mb-4">Sign Up</legen>
+          <div class="form-group">
+            {{ form.username.label(class="form-control-label") }} {{
+            form.username(class="form-control form-control-lg")}}
           </div>
+          <div class="form-group">
+            {{ form.email.label(class="form-control-label") }} {{
+            form.email(class="form-control form-control-lg")}}
+          </div>
+          <div class="form-group">
+            {{ form.password.label(class="form-control-label") }} {{
+            form.password(class="form-control form-control-lg")}}
+          </div>
+          <div class="form-group">
+            {{ form.confirm_password.label(class="form-control-label") }} {{
+            form.confirm_password(class="form-control form-control-lg")}}
+          </div>
+        </fieldset>
+        <div class="form-group">
+          {{ form.submit(class="btn authbg form-control mt-3") }}
         </div>
-      </div>
+      </form>
+    </div>
+    <div class="border-top pt-3">
+      <small class="text-muted">
+        Already Have an Account?
+        <a href="{{url_for('login')}}" class="ml-2">Login</a>
+      </small>
     </div>
   </section>
 </div>
