--- a/templates/header.html
+++ b/templates/header.html
@@ -53,7 +53,7 @@
                   <a href="#" class="btn text-uppercase">Login</a>
                 </div>
                 <div class="button">
-                  <a href="#" class="btn text-uppercase">Sign Up</a>
+                  <a href="{{url_for("register")}}" class="btn text-uppercase">Sign Up</a>
                 </div>
               </nav>
               <!-- End Navbar -->
